--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
             <i class="fa-solid fa-code"></i>
             <h2>Portfolio Website</h2>
             <p>
-              Optimized energy consumption by automatically adjusting lighting
-              and fan usage based on real-time conditions.
+              I created my personal portfolio website to showcase my skills and experience in web development.
             </p>
             <a href="">Learn more</a>
           </div>
