--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
               <a href="https://www.linkedin.com/in/md-azam-ansari-859252215/"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
+              <a
+                href="https://instagram.com/azamansari__developer?igshid=MzNlNGNkZWQ4Mg=="
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
             </div>
             <a href="AzamResume.pdf" download class="btn btn2">Download CV</a>
           </div>
