--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
             <i class="fa-solid fa-code"></i>
             <h2>Portfolio Website</h2>
             <p>
-              I created my personal portfolio website to showcase my skills and experience in web development.
+              I created my personal portfolio website to showcase my skills and
+              experience in web development.
             </p>
             <a href="">Learn more</a>
           </div>
@@ -140,7 +141,13 @@
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </div>
-            <a href="AzamResume.pdf" download class="btn btn2">Download CV</a>
+            <a
+              href="AzamResume.pdf"
+              download
+              class="btn btn2"
+              style="margin-top: 61px"
+              >Download CV</a
+            >
           </div>
           <div class="contact-rigth">
             <form name="submit-to-google-sheet">
