--- a/index.html
+++ b/index.html
@@ -92,33 +92,48 @@
         <div class="projects-list">
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Automation Of Light And Fan</h2>
+            <h2>My Portfolio Website</h2>
             <p>
-              Optimized energy consumption by automatically adjusting lighting
-              and fan usage based on real-time conditions.
+              The project I build is a dynamic and responsive web application
+              designed to showcase my skills, accomplishments, and contact
+              information. This website serves as a digital resume, providing
+              visitors with insights into my background, skills, and projects.
             </p>
-            <a href="">Learn more</a>
+            <a href="https://github.com/Md-Azam-Ansari/My-Portfolio-website"
+              >Learn more</a
+            >
           </div>
           <div>
-            <i class="fa-solid fa-fingerprint"></i>
-            <h2>Biometric Attendance</h2>
+            <i class="fa-solid fa-building"></i>
+            <h2>Employee Management System</h2>
             <p>
-              Improved accuracy and efficiency of attendance tracking through
-              hardware interfacing, programming, and cloud integration
+              The project I build is a simple Java-based Employee Management
+              System that allows you to manage employee records within a
+              company. It uses a MySQL database for data storage and retrieval.
+              The system is implemented in Java, making use of JDBC for database
+              connectivity.
             </p>
-            <a href="">Learn more</a>
+            <a
+              href="https://github.com/Md-Azam-Ansari/Employee-Management-System-Using-JDBC"
+              >Learn more</a
+            >
           </div>
           <div>
-            <i class="fa-solid fa-code"></i>
-            <h2>Portfolio Website</h2>
+            <i class="fa-solid fa-money-check-dollar"></i>
+            <h2>Simple Banking System Simulator</h2>
             <p>
-              I created my personal portfolio website to showcase my skills and
-              experience in web development.
+              The project I build is a Java-based project aimed at offering a
+              foundational understanding of essential banking system operations,
+              account management, and transactions. Although it is a simplified
+              simulation compared to real-world banking systems.
             </p>
-            <a href="">Learn more</a>
+            <a
+              href="https://github.com/Md-Azam-Ansari/Simple-Banking-System-Simulator"
+              >Learn more</a
+            >
           </div>
         </div>
-        <a href="" class="btn">See more</a>
+        <a href="https://github.com/Md-Azam-Ansari" class="btn">See more</a>
       </div>
     </div>
 
