--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li>
-                  <span>FRONT END</span><br />HTML <br />CSS <br />JavaScript
+                  <span>FRONT END</span><br />HTML <br />CSS
+                  <br />JavaScript<br />ReactJS
                 </li>
                 <li>
                   <span>BACK END</span><br />Core JAVA <br />SQL <br />JDBC
+                  <br />Hibernate
                 </li>
               </ul>
             </div>
